--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container flex">
       <div class="facebook-page flex">
         <div class="text">
-          <h1>facebook</h1>
+          <h1>Facebook Blue Badge</h1>
           <p>Verify Your Facebook Account </p>
           <p> And Look Like A Pro</p>
         </div>
